--- a/2.Bash.md
+++ b/2.Bash.md
@@ -1,1 +1,115 @@
 # Day 1
+
+## Man
+man ___ command
+
+
+## History
+show a list of previous commands
+
+
+## Cat
+```cat /etc/passwd
+```
+or
+ls -lisa in /etc and /passwd
+sometimes you wont be able to GO where you wanna work so you need to use absolute file paths
+
+
+## CD
+```cd ..
+```
+takes you back one
+```cd ~
+```
+back to the root
+
+
+## Touch
+```
+touch class005
+```
+ls -lisa and you will see a new file has been made
+
+```
+touch -t 202406170606.00 
+```
+can change timestamps for obsfuscation
+
+## LS
+```
+ls -lisa 
+ls -1
+```
+will allow you to see 1 per line
+
+```
+ls ~/*.log
+```
+will grab ANNYTHING and EVERYTHING ending with ".log"
+
+```
+ls -lisa /etc
+```
+
+## CD
+change directory
+
+```
+cd /home/student
+
+```
+```
+cd -
+```
+will take you back to the PREVIOUS directory
+
+
+## PWD
+Present working directory PWD will print the current directory
+
+
+## CP
+can copy from source to destination
+
+
+# MV 
+can rename something and move from source to destination
+
+
+## MKDIR
+```
+mkdir -p 
+```
+makes a parent directory
+
+
+## RMDIR
+will remove a directory
+rmdir - p will remove a parent directory if needed
+
+
+## RM
+remove will delete a file
+rm -r is recursively
+rm -rf is recursively and with for 
+
+
+## UMASK
+umask shows the default permissions
+
+
+## CHMOD 
+will allow you to change permissions for a file and we are good to run a 777
+
+
+## ETC
+ETC is everything configurable so pretty much all your conf files and generic files are here
+
+
+## BIN
+Binarys
+
+
+## SBIN
+System Binarys
