--- a/2.Bash.md
+++ b/2.Bash.md
@@ -17,7 +17,8 @@ sometimes you wont be able to GO where you wanna work so you need to use absolut
 
 
 ## CD
-```cd ..
+```
+cd..
 ```
 takes you back one
 ```cd ~
@@ -63,6 +64,81 @@ cd /home/student
 cd -
 ```
 will take you back to the PREVIOUS directory
+
+## Locate
+can find files and directorys
+```
+locate find
+```
+will return find from anywhere and everywhere
+
+## Find
+```
+find -name
+```
+case sensitive format of finding something
+
+```
+find -iname
+```
+insesitive case format of finding something
+
+```
+find -inum
+```
+finds INODE number
+
+```
+find -group name
+```
+find files with the groupname of name
+
+```
+find -user
+```  
+will locate all that specific users files that are owned by them
+
+```
+find -uid 1001
+```
+will locate all that specific UID and/or GUID that are owned by them
+
+```
+find -maxdepth 1
+```
+sets a find max depth that it will only look for something for example it is 1 directory deep
+
+```
+find / -type (f/d)
+```
+find all FILES and DIRECTORYS
+
+```
+find -name \*.txt
+```
+will find all the files ending with .txt
+
+```
+find -atime 3
+```
+anything ACCESSED within the past 3 days or whatever days
+
+```
+find -ctime 3
+```
+anything CHANGED within the past 3 days or whatever days
+
+```
+find -mtime 3
+```
+anything MODIFIED within the past 3 days or whatever days
+
+
+```
+find -(a/c/m)min 30
+```
+min is added to see modified/accessed/changed witin mins 
+
 
 
 ## PWD
