--- a/2.Bash.md
+++ b/2.Bash.md
@@ -135,10 +135,22 @@ anything MODIFIED within the past 3 days or whatever days
 
 
 ```
-find -(a/c/m)min 30
+find -(a/c/m)min -30
 ```
 min is added to see modified/accessed/changed witin mins 
 
+
+```
+find -executable
+```
+will located executable files
+
+
+## FIND -EXEC 
+```
+find [path] [argument] -exec [command] {} \;
+```
+will do the find and then execute a command for the find
 
 
 ## PWD
