--- a/2.Bash.md
+++ b/2.Bash.md
@@ -17,6 +17,12 @@ ls -lisa in /etc and /passwd
 sometimes you wont be able to GO where you wanna work so you need to use absolute file paths
 
 
+```
+cat /etc/passwd > fakepasswd.txt
+```
+will allow you to essentially copy 
+
+
 ## CD
 ```
 cd..
@@ -32,7 +38,7 @@ back to the root
 ```
 touch class005
 ```
-ls -lisa and you will see a new file has been made
+ls -lisa and you wilhttps://linuxhandbook.com/find-exec-command/l see a new file has been made
 
 ```
 touch -t 202406170606.00 
@@ -146,6 +152,42 @@ min is added to see modified/accessed/changed witin mins
 find -executable
 ```
 will located executable files
+
+```
+find / -inum 38 2>/dev/null
+```
+shows the output without any errors otherwise we see all the permission denied and file not available issues
+
+```
+find . -maxdepth 1 -type d
+```
+. will find in the current directory only 1 directory deep and returns a list of directories
+
+
+## New line
+/n
+
+
+## GREP
+Grab regular expressions
+```
+cat fakepasswd.txt | grep /bin/bash
+```
+will search through the passwd fake and find who has default /bin/bash shells
+
+```
+grep -E
+or
+egrep
+```
+allows for extended GREP when using REGEX
+
+```
+grep -v /bin/bash
+```
+INVERTS and searches for everything opposite of the argument
+
+
 
 
 ## FIND -EXEC 
