--- a/2.Bash.md
+++ b/2.Bash.md
@@ -188,6 +188,16 @@ grep -v /bin/bash
 INVERTS and searches for everything opposite of the argument
 
 
+## Brace Expansion
+```
+mkdir breky11{23,45,67}
+breky1123
+breky1145
+breky1167
+
+```
+will allow you to make more stuff quicker 
+
 
 
 ## FIND -EXEC 
