--- a/2.Bash.md
+++ b/2.Bash.md
@@ -242,7 +242,7 @@ umask shows the default permissions
 
 
 ## CHMOD 
-will allow you to change permissions for a file and we are good to run a 777
+will alfind -name *~.txt | grep -v *.txtlow you to change permissions for a file and we are good to run a 777
 
 
 ## ETC
@@ -255,3 +255,77 @@ Binarys
 
 ## SBIN
 System Binarys
+
+# BASH Activities
+## One
+Activity: Using Brace-Expansion, create the following directories within the $HOME directory:
+
+    1123
+    1134
+    1145
+    1156
+
+
+```
+mkdir 11{23,34,45,56}
+```
+
+## Two
+Use Brace-Expansion to create the following files within the $HOME/1123 directory. You may need to create the $HOME/1123 directory. Make the following files, but utilze Brace Expansion to make all nine files with one touch command.
+
+Files to create:
+
+    1.txt
+    2.txt
+    3.txt
+    4.txt
+    5.txt
+    6~.txt
+    7~.txt
+    8~.txt
+    9~.txt
+```
+cd 1123
+touch {1,2,3,4,5,6~,7~,8~,9~}.txt
+
+```
+## Three
+Using the find command, list all files in $HOME/1123 that end in .txt.
+
+Be aware that if you use Pattern Matching to locate the files you may have unintended results based on if you use quotes around the pattern or not. If you do not quote the pattern, the Bash shell interprets the pattern. If you quote the pattern, it is passed to the command for it to interpret. You can have a properly functioning command, yet unintended output, based on which of these two gets to interpret the pattern.
+
+```
+cd 1123
+find *.txt
+
+```
+## Four
+
+
+Challenge Activity:
+
+List all files in $HOME/1123 that end in .txt. Omit the files containing a tilde (~) character.
+
+While this activity can be accomplished with only find, it can also be combined with grep as well.
+
+```
+find -name '*.txt' | grep -v ~.txt
+
+```
+
+## Five
+
+
+Activity:
+
+Copy all files in the $HOME/1123 directory, that end in ".txt", and omit files containing a tilde "~" character, to directory $HOME/CUT.
+
+Use only the find and cp commands. You will need to utilize the -exec option on find to accomplish this activity.
+
+The find command uses BOOLEAN "!" to designate that it does not want to find any files or directories that follows.
+
+
+```
+find $HOME/1123 -name '*.txt' -not -name '*~*' -exec cp {} $HOME/CUT \;
+
+```
