--- a/2.Bash.md
+++ b/2.Bash.md
@@ -256,6 +256,12 @@ Binarys
 ## SBIN
 System Binarys
 
+## Boolean
+
+'''
+find $HOME/1123 -name *.txt ! -name *~*
+'''
+
 # BASH Activities
 ## One
 Activity: Using Brace-Expansion, create the following directories within the $HOME directory:
@@ -296,8 +302,7 @@ Be aware that if you use Pattern Matching to locate the files you may have unint
 
 ```
 cd 1123
-find *.txt
-
+find -name *.txt
 ```
 ## Four
 
@@ -309,7 +314,7 @@ List all files in $HOME/1123 that end in .txt. Omit the files containing a tilde
 While this activity can be accomplished with only find, it can also be combined with grep as well.
 
 ```
-find -name '*.txt' | grep -v ~.txt
+find $HOME/1123 -name '*.txt' | grep -v ~.txt
 
 ```
 
