--- a/2.Bash.md
+++ b/2.Bash.md
@@ -334,3 +334,23 @@ The find command uses BOOLEAN "!" to designate that it does not want to find any
 find $HOME/1123 -name '*.txt' -not -name '*~*' -exec cp {} $HOME/CUT \;
 
 ```
+
+
+## PS 
+Process List
+```
+ps -elf
+
+kill
+
+pkill
+
+killall
+```
+ps -elf shows the process list
+kill uses the process ID number
+pkill is using the process name
+-9 option can be added to force kill
+
+## Cut
+
