--- a/2.Bash.md
+++ b/2.Bash.md
@@ -164,6 +164,17 @@ find . -maxdepth 1 -type d
 . will find in the current directory only 1 directory deep and returns a list of directories
 
 
+```
+find -printf "%i %f\n"
+
+%i       %f
+40328202 1.txt
+40328203 2.txt
+40328204 3.txt
+
+```
+%i is for inode number %f is for filename and printf is another way to format the way something is outputted
+
 ## New line
 /n
 
@@ -262,6 +273,56 @@ System Binarys
 find $HOME/1123 -name *.txt ! -name *~*
 '''
 
+
+## PS 
+Process List
+```
+ps -elf
+
+kill
+
+pkill
+
+killall
+```
+ps -elf shows the process list
+kill uses the process ID number
+pkill is using the process name
+-9 option can be added to force kill
+
+## Cut
+```
+cat fakepasswd | cut -d: -f1
+root
+daemon
+bin
+sys
+sync
+```
+cat fakepasswd will send all the text to the screen and cut will allow you to cut with a -d dilimeter of a : and the field 1 
+
+```
+cat fakepasswd |  cut -d -f1 -s
+
+```
+-s is strict
+
+you can also add a thru option with the -f fields 
+
+```
+
+cat fakepasswd |  cut -d -f1-3 -s
+
+```
+
+-f2- will give you everything after the field 2 or whatever field that was given
+
+
+
+
+
+
+
 # BASH Activities
 ## One
 Activity: Using Brace-Expansion, create the following directories within the $HOME directory:
@@ -335,22 +396,4 @@ find $HOME/1123 -name '*.txt' -not -name '*~*' -exec cp {} $HOME/CUT \;
 
 ```
 
-
-## PS 
-Process List
-```
-ps -elf
-
-kill
-
-pkill
-
-killall
-```
-ps -elf shows the process list
-kill uses the process ID number
-pkill is using the process name
--9 option can be added to force kill
-
-## Cut
 
