--- a/2.Bash.md
+++ b/2.Bash.md
@@ -175,6 +175,13 @@ find -printf "%i %f\n"
 ```
 %i is for inode number %f is for filename and printf is another way to format the way something is outputted
 
+
+```
+find /var -empty
+```
+-empty will find all files and directories that are empty
+
+
 ## New line
 /n
 
@@ -324,7 +331,7 @@ cat fakepasswd |  cut -d -f1-3 -s
 
 
 # BASH Activities
-## One
+## 01
 Activity: Using Brace-Expansion, create the following directories within the $HOME directory:
 
     1123
@@ -337,7 +344,7 @@ Activity: Using Brace-Expansion, create the following directories within the $HO
 mkdir 11{23,34,45,56}
 ```
 
-## Two
+## 01.2
 Use Brace-Expansion to create the following files within the $HOME/1123 directory. You may need to create the $HOME/1123 directory. Make the following files, but utilze Brace Expansion to make all nine files with one touch command.
 
 Files to create:
@@ -356,7 +363,7 @@ cd 1123
 touch {1,2,3,4,5,6~,7~,8~,9~}.txt
 
 ```
-## Three
+## 01.3
 Using the find command, list all files in $HOME/1123 that end in .txt.
 
 Be aware that if you use Pattern Matching to locate the files you may have unintended results based on if you use quotes around the pattern or not. If you do not quote the pattern, the Bash shell interprets the pattern. If you quote the pattern, it is passed to the command for it to interpret. You can have a properly functioning command, yet unintended output, based on which of these two gets to interpret the pattern.
@@ -365,7 +372,7 @@ Be aware that if you use Pattern Matching to locate the files you may have unint
 cd 1123
 find -name *.txt
 ```
-## Four
+## 01.3
 
 
 Challenge Activity:
@@ -379,7 +386,7 @@ find $HOME/1123 -name '*.txt' | grep -v ~.txt
 
 ```
 
-## Five
+## 02
 
 
 Activity:
@@ -395,5 +402,41 @@ The find command uses BOOLEAN "!" to designate that it does not want to find any
 find $HOME/1123 -name '*.txt' -not -name '*~*' -exec cp {} $HOME/CUT \;
 
 ```
+
+## 03
+
+
+Activity:
+
+Using ONLY the find command, find all empty files/directories in directory /var and print out ONLY the filename (not absolute path), and the inode number, separated by newlines.
+
+Tip: When using the man pages, it is better to focus your search then to visually scan 1000+ lines of text. Combining the output with the grep command, possibly with its -A, -B, or -C options, can help drive context driven searches of those manual pages.
+
+Example Output
+
+123 file1
+456 file2
+789 file3
+
+```
+find /var -empty -printf "%i %f\n"
+
+```
+
+## 04
+
+
+Activity:
+
+Using ONLY the find command, find all files on the system with inode 4026532575 and print only the filename to the screen, not the absolute path to the file, separating each filename with a newline. Ensure unneeded output is not visible.
+
+Tip: The above inode is specific to this CTFd question and might not be in use on your Linux Opstation. Instead, you can test your command on your Linux OpStation against inode 999.
+
+```
+find / -inum 4026532575 -printf "%f\n"
+
+```
+
+## 05
 
 
