--- a/2.Bash.md
+++ b/2.Bash.md
@@ -433,7 +433,7 @@ Using ONLY the find command, find all files on the system with inode 4026532575 
 Tip: The above inode is specific to this CTFd question and might not be in use on your Linux Opstation. Instead, you can test your command on your Linux OpStation against inode 999.
 
 ```
-find / -inum 4026532575 -printf "%f\n"
+find / -inum 4026532575 -printf "%f\n" 2>/dev/null
 
 ```
 
