--- a/2.Bash.md
+++ b/2.Bash.md
@@ -438,5 +438,25 @@ find / -inum 4026532575 -printf "%f\n" 2>/dev/null
 ```
 
 ## 05
+Activity:
+
+    Using only the ls -l and cut Commands, write a BASH script that shows all filenames with extensions ie: 1.txt, etc., but no directories, in $HOME/CUT.
+    Write those to a text file called names in $HOME/CUT directory.
+    Omit the names filename from your output.
+
+```
+
+ls -l $HOME/CUT | cut -d. -f1- -s | cut -d: -f2 | cut -d' ' -f2 > $HOME/CUT/names
+
+```
+-s cuts on the period -d. and if it doesnt have it then it doesnt show
+
+-d: will cut on the : between the time
+
+-d' ' now cuts on the space 53 title.txt to title.txt
+
+once thats done you send it to >> $HOME/CUT/names
+
+
 
 
