--- a/2.Bash.md
+++ b/2.Bash.md
@@ -431,7 +431,7 @@ Activity:
 Using ONLY the find command, find all files on the system with inode 4026532575 and print only the filename to the screen, not the absolute path to the file, separating each filename with a newline. Ensure unneeded output is not visible.
 
 Tip: The above inode is specific to this CTFd question and might not be in use on your Linux Opstation. Instead, you can test your command on your Linux OpStation against inode 999.
-
+ func
 ```
 find / -inum 4026532575 -printf "%f\n" 2>/dev/null
 
@@ -456,6 +456,69 @@ ls -l $HOME/CUT | cut -d. -f1- -s | cut -d: -f2 | cut -d' ' -f2 > $HOME/CUT/name
 -d' ' now cuts on the space 53 title.txt to title.txt
 
 once thats done you send it to >> $HOME/CUT/names
+
+
+# Day 2
+
+## awk
+language inside of a language
+
+```
+cat fakepasswd.txt | awk -F: '{print $1}'
+
+```
+awk -F: is saying that the fields are seperated by : and '{print $1,$3}' allows us to print those fields
+
+```
+cat fakepasswd.txt | awk -F: '{print $NF}'
+```
+$NF grabs the last field
+
+
+```
+cat /etc/passwd | awk -F: '($3 >= 150){print $0}'
+```
+$0 will print all string data that matches
+($3 >= 150) is saying if field 3 is greater than or equal to 150
+
+```
+cat /etc/passwd | awk -F: 'BEGIN {OFS="#"}{print $1,$6,$5}'
+root#/root#0
+
+root:/root:0
+```
+OFS="#" allows you to change what the results are of the parse outputted format
+
+## sort
+sort contents depending on the order on the ASCII table
+
+```
+ps aux | sort -k 1
+
+```
+-k is columns
+allows us to sort by what is in the -k column 1
+-n numerically
+
+```
+ps aux | sort -T
+```
+-T is field seperator
+
+-u is unique
+
+## uniq
+uniq has to have things sorted before it can be uniq
+
+https://unix.stackexchange.com/questions/76049/what-is-the-difference-between-sort-u-and-sort-uniq
+
+## Aliases
+
+cat = open
+nano = vi
+vi = nano
+
+
 
 
 
