--- a/2.Bash.md
+++ b/2.Bash.md
@@ -467,6 +467,24 @@ It is not important to have a regular expression that only catches fully valid I
 ```
 grep -oE '\b([0-9]{1,3}\.){3}[0-9]{1,3}\b' StoryHiddenIPs | sort | uniq -c | sort -nr
 ```
+grep for the ip addresses 
+in order to sort them by how many times they appear we sort
+then send it to uniq -c for the count 
+then we sort for numerically reversed to order them correctly
+from 
+1
+2
+3
+5
+1
+2
+to going to 
+5
+3
+2
+1
+
+
 
 ## 07
 Activity:
@@ -478,6 +496,14 @@ Activity:
 ```
 awk -F: '$3 > 3 && $7 == "/bin/bash" {print $1}' $HOME/passwd > $HOME/SED/names.txt
 ```
+
+since the UID field is 3 we set the value to be above 3 since 0-3 is being asked to be left out
+
+awk -F: = field seperator is equal to a :
+'$3 > 3 && $NF(or $7) == "/bin/bash" {print $1}' = this is saying that if field 3 is greater than 3 and if the last field $NF or the $7th field as we know it is == "/bin/bash" then to {print $1} the first field
+
+
+
 
 ## 08
 Activity:
@@ -493,7 +519,9 @@ dmesg | grep -e "CPU" -e "BIOS" | grep -v -i -e "usable" -e "reserved" | cut -d"
 
 # Day 2
 
-## awk
+## awk 
+awk options (-F:) 'selection _criteria {action }' input-file > output-file
+
 language inside of a language
 
 ```
