--- a/2.Bash.md
+++ b/2.Bash.md
@@ -522,6 +522,8 @@ dmesg | grep -e "CPU" -e "BIOS" | grep -v -i -e "usable" -e "reserved" | cut -d"
 ## awk 
 awk options (-F:) 'selection _criteria {action }' input-file > output-file
 
+awk -F: '$3 > 3 && $7 == "/bin/bash" {print $1}' $HOME/passwd > $HOME/SED/names.txt
+
 language inside of a language
 
 ```
