--- a/2.Bash.md
+++ b/2.Bash.md
@@ -572,6 +572,8 @@ ps aux | sort -T
 
 ## uniq
 uniq has to have things sorted before it can be uniq
+uniq -c = uniq count
+
 
 https://unix.stackexchange.com/questions/76049/what-is-the-difference-between-sort-u-and-sort-uniq
 
@@ -582,6 +584,57 @@ https://unix.stackexchange.com/questions/76049/what-is-the-difference-between-so
 cat = open
 nano = vi
 vi = nano
+
+## sed
+sed OPTIONS... [SCRIPT] [INPUTFILE...] 
+
+-e expression for multiple sed patterns
+s is substitution start pattern with substitute patter
+g is for globally throughout the file
+d deletes the entire line
+$ means end of line
+
+```
+cat pizza.txt
+
+chicken
+pepperonis
+cheese
+bacon
+chicken
+chicken chicken
+chicken pizza
+
+sed -e 's/chicken/hamburger/g' -e 's/pepperoni/sausage/' pizza.txt
+
+hamburger
+pepperonis
+cheese
+bacon
+hamburger
+hamburger hamburger
+hamburger pizza
+
+sed -e 's/chicken/hamburger/g pizza.txt
+
+hamburger
+pepperonis
+cheese
+bacon
+hamburger
+hamburger hamburger
+hamburger pizza
+
+sed -e '/chicken/d' pizza.txt (deletes the whole line)
+
+pepperoni pepperoni
+cheese pepperoni
+bacon
+pineapple
+pepperoni
+```
+
+
 
 
 
