--- a/2.Bash.md
+++ b/2.Bash.md
@@ -635,6 +635,29 @@ pepperoni
 ```
 
 ## comsub
+command substitution
+```
+#!/bin/bash
+A=$(find /usr/bin -name passwd)
+echo $A
+echo
+md5sum $A
+echo
+file $A
+```
+
+```
+/usr/bin/passwd
+
+e1ab1a23e4bbe133aa005643c896665a  /usr/bin/passwd
+
+/usr/bin/passwd: setuid ELF 64-bit LSB shared object, x86-64, version 1 (SYSV), dynamically linked, interpreter /lib64/ld-linux-x86-64.so.2, for GNU/Linux 3.2.0, BuildID[sha1]=28cf97b65d2eda0af60f584ea5db6d5b692b0229, stripped
+
+
+```
+
+
+
 
 ```
 #!/bin/bash
