--- a/2.Bash.md
+++ b/2.Bash.md
@@ -515,7 +515,55 @@ Activity:
 dmesg | grep -e "CPU" -e "BIOS" | grep -v -i -e "usable" -e "reserved" | cut -d"]" -f2-
 ```
 
+## 09
 
+    Write a Bash script using "Command Substitution" to replace all passwords, using openssl, from the file $HOME/PASS/shadow.txt with the MD5 encrypted password: Password1234, with salt: bad4u
+    Output of this command should go to the screen/standard output.
+    You are not limited to a particular command, however you must use openssl. Type man openssl passwd for more information.
+
+```
+#!/bin/bash
+# Define the plain text password and salt that are being applied
+
+plain="Password1234"
+salt="bad4u"
+
+# Create a way to generate MD5 encrypted password
+
+md5(){
+openssl passwd -1 -salt "$salt" "$plain"
+
+}
+
+# Process each line in the shadow.txt and replace passwords
+
+while IFS=: read -r user old_password rest_of_line; do
+    new_password=$(md5)
+    echo "$username:$new_password:$rest_of_line"
+done < "$HOME/PASS/shadow.txt"
+
+
+## 10
+
+Using ONLY sed, write all lines from $HOME/passwd into $HOME/PASS/passwd.txt that do not end with either /bin/sh or /bin/false.
+
+```
+sed -e '\/bin\/sh/d' -e '\/bin\/false/d' $HOME/passwd > $HOME/PASS/passwd.txt
+```
+we use sed -e to delete both the /bin/sh and /bin/false from the $HOME/passwd file using the "d" option after the file paths
+once we delete them we can > them to the $HOME/PASS/passwd.txt
+
+## 11
+
+    Using find, find all files under the $HOME directory with a .bin extension ONLY.
+    Once the file(s) and their path(s) have been found, remove the file name from the absolute path output.
+    Ensure there is no trailing / at the end of the directory path when outputting to standard output.
+    You may need to sort the output depending on the command(s) you use.
+
+```
+
+
+```
 
 # Day 2
 
@@ -593,6 +641,8 @@ s is substitution start pattern with substitute patter
 g is for globally throughout the file
 d deletes the entire line
 $ means end of line
+
+sed -n: This option suppresses automatic printing of pattern space. We use it to control when to print explicitly.
 
 ```
 cat pizza.txt
@@ -685,6 +735,10 @@ output
 ```
 banana is NOT an apple
 ```
+
+double brackets [[]]]
+single brackets []
+
 
 
 
