--- a/2.Bash.md
+++ b/2.Bash.md
@@ -561,9 +561,27 @@ once we delete them we can > them to the $HOME/PASS/passwd.txt
     You may need to sort the output depending on the command(s) you use.
 
 ```
-
+find $HOME -name "*.bin" -type f | rev | cut -d'/' -f2- | rev | sort -u
 
 ```
+
+so first we find in the $HOME all files -type f with the file extension of -name "*.bin" once we have a list we can reverse it with rev to be able to cut -d'/' -f2- to grab everthing minus the filename.extension then we reverse it again and sort u 
+
+## 12
+ Write a script which will copy the last entry/line in the passwd-like file specified by the $1 positional parameter
+    Modify the copied line to change:
+        User name to the value specified by $2 positional parameter
+        Used id and group id to the value specified by $3 positional parameter
+        Home directory to a directory matching the user name specified by $2 positional parameter under the /home directory
+        The default shell to `/bin/bash'
+    Append the modified line to the end of the file
+
+```
+
+```
+
+
+
 
 # Day 2
 
