--- a/2.Bash.md
+++ b/2.Bash.md
@@ -739,7 +739,7 @@ root:x:0:0:root:/root:/bin/bash daemon:x:1:1:daemon:/usr/sbin:/usr/sbin/nologin 
 ```
 
 
-# IF ELSE FI
+## IF ELSE FI
 ```
 #!/bin/bash
 
@@ -757,6 +757,21 @@ banana is NOT an apple
 
 double brackets [[]]]
 single brackets []
+
+```
+#!/bin/bash
+
+contents=$(cat simple)
+if [[ $contents == "tacos "]]; then
+    echo "are good on tuesday"
+elif [[ $contents == "cossco is amazing" ]]; then
+    echo "and will save you money"
+elif [[ $contents == "chicken bake" ]]; then
+    echo "tasty but will make you fail ht/wt"
+else
+    echo "no tax at commissary"
+fi
+```
 
 
 
