--- a/2.Bash.md
+++ b/2.Bash.md
@@ -581,6 +581,28 @@ so first we find in the $HOME all files -type f with the file extension of -name
 ```
 
 
+## 13
+Activity:
+
+    Find all executable files under the following four directories:
+        /bin
+        /sbin
+        /usr/bin
+        /usr/sbin
+    Sort the filenames with absolute path, and get the md5sum of the 10th file from the top of the list.
+
+```
+#!/bin/bash
+a=$(find /bin /sbin /usr/sbin /usr/bin -type f -executable | sort | head -10 | tail -1)
+b=$(md5sum $a | cut -d" " -f1)
+echo $b
+
+```
+the a is listing all the files that are executable and sorting them then we send that to head 10 to grab the first ten and tail -1 to grab the last one in the list
+
+we then use b to md5sum the output of that directory and send it to cut the hash and directory from eachother
+
+
 
 
 # Day 2
