--- a/2.Bash.md
+++ b/2.Bash.md
@@ -606,6 +606,42 @@ the a is listing all the files that are executable and sorting them then we send
 we then use b to md5sum the output of that directory and send it to cut the hash and directory from eachother
 
 
+## 14
+
+    Sort the /etc/passwd file numerically by the GID field.
+    For the 10th entry in the sorted passwd file, get an md5 hash of that entry’s home directory.
+    Output ONLY the MD5 hash of the directory's name to standard output.
+
+```
+sort -t: -k 4 /etc/passwd -n | head -10 | tail -1 | awk -F: '{print $6}' | md5sum | cut -d' ' -f1
+
+```
+
+-t is dilimeter
+-k column 4 to sort -N numerically on the GUID
+we head and tail to grab the first 10 and the last 
+the we awk to format it to print the 6th field and mdfsum it 
+
+## 15
+
+
+    Write a script which will find and hash the contents 3 levels deep from each of these directories: /bin /etc /var
+    Your script should:
+        Exclude named pipes. These can break your script.
+        Redirect STDOUT and STDERR to separate files.
+        Determine the count of files hashed in the file with hashes.
+        Determine the count of unsuccessfully hashed directories.
+        Have both counts output to the screen with an appropriate title for each count.
+```
+#!/bin/bash
+find /bin /etc /var -maxdepth 3 ! -type p -exec md5sum {} \; 1>good.txt 2>bad.txt
+a=$(wc -l good.txt | cut -d' ' -f1)
+b=$(cat bad.txt | grep "Is a directory" | wc -l | cut -d' ' -f1)
+echo "Successfully Hashed Files: "$a
+echo "Unsuccessfully Hashed Directories: "$b
+
+```
+
 
 
 # Day 2
