--- a/2.Bash.md
+++ b/2.Bash.md
@@ -642,6 +642,26 @@ echo "Unsuccessfully Hashed Directories: "$b
 
 ```
 
+## 16
+
+Design a script that detects the existence of directory: $HOME/.ssh
+
+Upon successful detection, copies any and all files from within the directory $HOME/.ssh to directory $HOME/SSH and produce no output. You will need to create $HOME/SSH.
+Upon un-successful detection, displays the error message "Run ssh-keygen" to the user.
+
+```
+a=$(find $HOME -name ".ssh" 2>/dev/null)
+b="$HOME/.ssh"
+c=$(cp -a "$a" $HOME/SSH)
+mkdir $HOME/SSH
+if [[ $a == $b ]]
+    then $c
+else echo "Run ssh-keygen"
+fi
+
+```
+
+## 17
 
 
 # Day 2
