--- a/2.Bash.md
+++ b/2.Bash.md
@@ -744,7 +744,7 @@ $ means end of line
 sed -n: This option suppresses automatic printing of pattern space. We use it to control when to print explicitly.
 
 ```
-cat pizza.txt
+cat pizza.txt[ echo {100..999} | grep -we $a ]
 
 chicken
 pepperonis
@@ -870,9 +870,11 @@ function q1()
   #Valid Variables are:
   infile=$1
   outfile=$2
+
   sed -e 's/cat/dog/g' -e 's/Navy/Army/g' $infile >> $outfile
 }
 ```
+SED replaces a word for a word /sword1/word2/g
 
 
 Create a script that will print to standard output all user names from the /etc/passwd file.
@@ -886,6 +888,9 @@ function q1()
 }
 
 ```
+
+cut -d: -f1 /etc/passwd
+
 
 
 Create a script that will perform the following actions:
@@ -919,6 +924,9 @@ function q1()
 }
 
 ```
+rmdir -r $dirdel
+or
+rm -r $dirdel
 
 Create a script that will perform the following actions:
 
@@ -1004,8 +1012,33 @@ function q1()
 {
   #Valid Variables are:
   dirname=$1
-  #Your code here
+  ls -1 $dirname | wc -l
 }
+```
+
+
+
+
+
+Read the file specified by fname and perform an action based on the contents of the file:
+
+    If contents are 0 to 9, print "single digit" to standard output.
+    If contents are 10 to 99, print "double digit" to standard output.
+    If contents are 100 to 999, print "triple digit" to standard output.
+    Otherwise, print "Error" to standard output.
+
+```
+cont=(cat $fname)
+if [[ $cont -lt 10 ]] : then
+    echo single digit
+elif [[ $cont -lt 100 ]] : then
+    echo double digit
+elif [[ $cont -lt 1000 ]] : then
+    echo triple digit
+else
+    echo Error
+fi
+
 ```
 
 
