--- a/2.Bash.md
+++ b/2.Bash.md
@@ -966,7 +966,11 @@ function q1()
 
 
 ```
-
+sort
+-mtime is modified time
+-1 is meaning one day before as in minus 1
+-type is for files
+0 works for the last day
 
 
 Terminate the process that has the randomly assigned name specified by procname variable. procname does not contain path information.
@@ -981,6 +985,8 @@ function q1()
 }
 
 ```
+killall $procname
+
 
 Copy all lines from the file specified by src variable to the file specified by dst variable which DO NOT contain the text specified by match variable.
 
@@ -994,9 +1000,8 @@ function q1()
   grep -vwE $match $src > $dst
 }
 
-
 ```
-
+cat $src | grep -v $match > $dst
 
 
 
@@ -1040,6 +1045,7 @@ else
 fi
 
 ```
+
 
 
 
