--- a/2.Bash.md
+++ b/2.Bash.md
@@ -25,6 +25,12 @@ cat /etc/passwd > fakepasswd.txt
 ```
 will allow you to essentially copy 
 
+## Wordcount
+wc -l
+
+## MaxDepth
+
+-maxdepth
 
 ## CD
 ```
