--- a/2.Bash.md
+++ b/2.Bash.md
@@ -1040,11 +1040,11 @@ Read the file specified by fname and perform an action based on the contents of 
 
 ```
 cont=(cat $fname)
-if [[ $cont -lt 10 ]] : then
+if [[ $cont -lt 10 ]] ; then
     echo single digit
-elif [[ $cont -lt 100 ]] : then
+elif [[ $cont -lt 100 ]] ; then
     echo double digit
-elif [[ $cont -lt 1000 ]] : then
+elif [[ $cont -lt 1000 ]] ; then
     echo triple digit
 else
     echo Error
